# radio_sim

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: README.md
docs/source/: conf.py  index.rst
radio_sim/: __init__.py  array.py  beams.py  radio_sim.py  sky.py  utils.py
radio_sim/tests/: test_array.py  test_beams.py  test_radio_sim.py  test_sky.py  test_utils.py
