[metadata]
name = radio_sim
version = 0.0.2
author = Tyler Cox
author_email = tyler.a.cox@berkeley.edu
description = Package for simulating radio interferometer observations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyler-a-cox/radio_sim
project_urls =
    Bug Tracker = https://github.com/tyler-a-cox/radio_sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
